--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
+    "express": "4.16.4",
     "kanap-backend": "file:",
     "uuid": "^3.3.2"
   }
